# data-management-plan-tooling

./: .gitignore  README.md  main.py  pyproject.toml
dmpt/: database.py  dmp_v1.py  dmp_v2.py  get_fnc_data.py  read_dmp.py  score_dmp.py  score_dmp_files.py  workflow.py
dmpt/tools/: find_version_number.py  get_fnc_data.py  parsers.py
tests/: test_match.py
